--- a/html-components/swim-programs.html
+++ b/html-components/swim-programs.html
@@ -6,7 +6,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <!-- Font awesome CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
         <link rel="stylesheet" href="../css/swimprogram.css">
         <link rel="stylesheet" href="../css/common.css">
@@ -102,67 +102,68 @@
             </main> <!-- End  Main Content -->
 
             <!-- Footer -->
-            <footer>
-                <div class="footerLogo">
-                    <img class="map" src="../images/wave-small.png" alt="Splashes">
+            <footer class="container-fluid mt-5 py-5">
+                <div class="container-xl py-5">
+                    <img class="footerLogo pb-5" src="../images/wave-small.png" alt="Splashes">
+                    <div class="row font-weight-bold">
+                        <div class="col-xl-6 text-xl-left">
+                            <ul>
+                                <li><a>About</a></li>
+                                <li><a>Locations</a></li>
+                                <li><a>FAQs</a></li>
+                                <li><a>Contact</a></li>
+                                <li><a>Register / Sign in</a></li>
+                                <li><a>Careers</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-xl-6 text-xl-right pr-xl-5">
+                            <a href="#" class="fa-brands fa-linkedin-in rounded-circle"></a>
+                            <a href="#" class="fa-brands fa-instagram rounded-circle"></a>
+                            <a href="#" class="fa-brands fa-twitter rounded-circle"></a>
+                            <a href="#" class="fa-brands fa-yelp rounded-circle"></a>
+                            <a href="#" class="fa-brands fa-facebook-f rounded-circle"></a>
+                            <a href="#" class="fa-brands fa-youtube rounded-circle"></a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="footerContacts row my-4">
+                        <div class="col-xl-2 offset-xl-1 py-2">
+                            <p class="location">Orange County</p>
+                            <p class="phone mt-n2">(949) 450-0777</p>
+                        </div>
+                        <div class="col-xl-2 py-2">
+                            <p class="location">San Diego County</p>
+                            <p class="phone mt-n2">(760) 603-9400</p>
+                        </div>
+                        <div class="col-xl-2 py-2">
+                            <p class="location">Los Angeles County</p>
+                            <p class="phone mt-n2">(626) 836-1200</p>
+                        </div>
+                        <div class="col-xl-2 py-2">
+                            <p class="location">Northern California</p>
+                            <p class="phone mt-n2">(408) 279-1700</p>
+                        </div>
+                        <div class="col-xl-2 py-2">
+                            <p class="location">Denver</p>
+                            <p class="phone mt-n2">(720) 344-7700</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div id="footerBottom">
+                        <div class="sponsors">
+                            <img src="../images/sponsors/footer-usssa-logo-2.png" alt="sponsor1">
+                            <img src="../images/sponsors/footer-ndpa-logo.png" alt="sponsor2">
+                            <img src="../images/sponsors/footer-member-issa-logo.png" alt="sponsor3">
+                            <img src="../images/sponsors/footer-stop-drowning-now-logo.png" alt="sponsor4">
+                        </div>
+                        <div id="copyright">
+                            <p>&copy; 2022 Splashes.</p>
+                            <p class="mt-n2">All Rights Reserved</p>
+                        </div>
+                    </div>
                 </div>
-                <div id="footerTop">
-                    <div class="footerLinks">
-                        <ul>
-                            <li><a>About</a></li>
-                            <li><a>Locations</a></li>
-                            <li><a>FAQs</a></li>
-                            <li><a>Contact</a></li>
-                            <li><a>Register / Sign in</a></li>
-                            <li><a>Careers</a></li>
-                        </ul>
-                    </div>
-                    <div class="footerSocial">
-                        <a href="#" class="fa fa-linkedin"></a>
-                        <a href="#" class="fa fa-instagram"></a>
-                        <a href="#" class="fa fa-twitter"></a>
-                        <a href="#" class="fa fa-yelp"></a>
-                        <a href="#" class="fa fa-facebook"></a>
-                        <a href="#" class="fa fa-youtube"></a>
-                    </div>
-                </div>
-                <hr>
-                <div class="footerLocations">
-                    <div>
-                        <p class="footerLocation">Orange County</p>
-                        <p class="footerPhone">(949) 450-0777</p>
-                    </div>
-                    <div>
-                        <p class="footerLocation">San Diego County</p>
-                        <p class="footerPhone">(760) 603-9400</p>
-                    </div>
-                    <div>
-                        <p class="footerLocation">Los Angeles County</p>
-                        <p class="footerPhone">(626) 836-1200</p>
-                    </div>
-                    <div>
-                        <p class="footerLocation">Northern California</p>
-                        <p class="footerPhone">(408) 279-1700</p>
-                    </div>
-                    <div>
-                        <p class="footerLocation">Denver</p>
-                        <p class="footerPhone">(720) 344-7700</p>
-                    </div>
-                </div>
-                <hr>
-                <div id="footerBottom">
-                    <div class="sponsors">
-                        <img class="map" src="../images/sponsors/footer-usssa-logo-2.png" alt="sponsor1">
-                        <img class="map" src="../images/sponsors/footer-ndpa-logo.png" alt="sponsor2">
-                        <img class="map" src="../images/sponsors/footer-member-issa-logo.png" alt="sponsor3">
-                        <img class="map" src="../images/sponsors/footer-stop-drowning-now-logo.png" alt="sponsor4">
-                    </div>
-                    <div id="copyright">
-                        <p>&copy; 2022 Splashes.</p>
-                        <p>All Rights Reserved</p>
-                    </div>
-                </div>
-            </footer> <!-- End Footer -->
+            </footer> 
+            <!-- End Footer -->
         </div>
         <!-- javascript codes -->
         <!-- TODO later when refactoring -->
